--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@react-three/drei": "^10.0.2",
     "@react-three/fiber": "^9.0.4",
+    "antd": "^5.24.3",
     "axios": "^1.2.0",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
+    "laravel-echo": "^2.0.2",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
